--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "dist",
     "rootDir": ".",
     "esModuleInterop": true,
+  "types": ["node"],
     "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true
